--- a/mainpage/footer.css
+++ b/mainpage/footer.css
@@ -1,8 +1,9 @@
 footer{
   margin-top: auto;
-  margin-top: 110px;
-  padding-bottom: 67px;
+  padding-bottom: 50px;
+  padding-top: 50px;
   position: relative;
+
 }
 
 
