--- a/mainpage/news.css
+++ b/mainpage/news.css
@@ -2,6 +2,10 @@
   margin-bottom: 127px;
 }
 
+.news__img{
+  border-radius: 5px 5px 0px 0px;
+}
+
 .title {
   font-size: 36px;
   font-weight: bold;
